; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_nfs42xdr.c_encode_fallocate.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_nfs42xdr.c_encode_fallocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xdr_stream = type { i32 }
%struct.nfs42_falloc_args = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xdr_stream*, %struct.nfs42_falloc_args*)* @encode_fallocate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @encode_fallocate(%struct.xdr_stream* %0, %struct.nfs42_falloc_args* %1) #0 {
  %3 = alloca %struct.xdr_stream*, align 8
  %4 = alloca %struct.nfs42_falloc_args*, align 8
  store %struct.xdr_stream* %0, %struct.xdr_stream** %3, align 8
  store %struct.nfs42_falloc_args* %1, %struct.nfs42_falloc_args** %4, align 8
  %5 = load %struct.xdr_stream*, %struct.xdr_stream** %3, align 8
  %6 = load %struct.nfs42_falloc_args*, %struct.nfs42_falloc_args** %4, align 8
  %7 = getelementptr inbounds %struct.nfs42_falloc_args, %struct.nfs42_falloc_args* %6, i32 0, i32 2
  %8 = call i32 @encode_nfs4_stateid(%struct.xdr_stream* %5, i32* %7)
  %9 = load %struct.xdr_stream*, %struct.xdr_stream** %3, align 8
  %10 = load %struct.nfs42_falloc_args*, %struct.nfs42_falloc_args** %4, align 8
  %11 = getelementptr inbounds %struct.nfs42_falloc_args, %struct.nfs42_falloc_args* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @encode_uint64(%struct.xdr_stream* %9, i32 %12)
  %14 = load %struct.xdr_stream*, %struct.xdr_stream** %3, align 8
  %15 = load %struct.nfs42_falloc_args*, %struct.nfs42_falloc_args** %4, align 8
  %16 = getelementptr inbounds %struct.nfs42_falloc_args, %struct.nfs42_falloc_args* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @encode_uint64(%struct.xdr_stream* %14, i32 %17)
  ret void
}

declare dso_local i32 @encode_nfs4_stateid(%struct.xdr_stream*, i32*) #1

declare dso_local i32 @encode_uint64(%struct.xdr_stream*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
